--- a/wp-content/themes/morya_theme/assets/css/custom.css
+++ b/wp-content/themes/morya_theme/assets/css/custom.css
@@ -2,6 +2,49 @@ html, body {
     background-color: black;
     overflow-x: hidden;
 }
+/* Animação */
+
+[data-anime] {
+    opacity: 0;
+    transition: .3s;
+}
+[data-anime="left"] {
+    transform: translate3d(-150px, 0, 0);
+}
+
+[data-anime="down"] {
+    transform: translate3d(0, -150px, 0);
+}
+[data-anime="rigth"] {
+    transform: translate3d(150px, 0, 0);
+}
+[data-anime="down"] {
+    transform: translate3d(0, 150px, 0);
+}
+[data-anime].animate {
+    opacity: 1;
+    transform: translate3d(0,0,0);
+}
+.header_full {
+    height: 100vh;
+}
+.section-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
+    text-align: center;
+    transition: .5s height;
+}
+.section-image img{
+    width: 15rem;
+    height: 15rem;
+}
+.content_header {
+    text-align: center;
+    margin-bottom: 15rem;
+}
+
 .section-content {
     display: flex;
     justify-content: center;
@@ -81,6 +124,10 @@ html, body {
 .profile_history {
     color: white;
 }
+.contato {
+    margin-top: 7rem;
+    margin-bottom: 7rem;
+}
 .footer {
     width: 100%;
     background: #636363;
@@ -103,47 +150,79 @@ html, body {
     margin-right: 0.6rem;
     font-size: 18px !important;
 }
-footer .menu{
-    display: flex;
-    justify-content: center;
-}
-footer .menu ul{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
+
+ul, ol {
     list-style: none;
-    font-weight: bold;
+    padding: 0;
+    margin: 0;
 }
-footer .menu ul li {
-    margin: 0 auto;
-    color: #A98900 ;
+footer {
+    padding: 4rem;
 }
-footer .menu ul li a {
-    color: #A98900;
-    text-decoration: none;
-}
-footer .redes-sociais {
+.social-inner {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 23px;
+    font: 900 13px/1 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.5);
 }
-footer .social_media {
+.nav-list li a:before {
+    content: "\f14f";
+    font: 400 21px/1 "Material Design Icons";
+    color: #4d6de6;
+    display: inline-block;
+    vertical-align: baseline;
+    margin-left: -28px;
+    margin-right: 7px;
+    opacity: 0;
+    visibility: hidden;
+    transition: .22s ease;
+}
+.embed-container { 
+    position: relative; 
+    padding-bottom: 56.25%;
+    overflow: hidden;
+    max-width: 100%;
+    height: auto;
+} 
+.text_info {
+    color: white;
+}
+.itens_menu a { 
+    color:white;
+}
+.social_midia a {
+    color: white;
+}
+.social_midia li{
+    margin: 0 auto;
+}
+.text_info,
+.itens_menu,
+.social_midia {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 10%;
-}
-footer .redes-sociais .social_media a {
-    text-decoration: none;
-    color: white;
-    margin: 0 auto;
-    width: 30%;
-    transition: 0.8s color;
+    
 }
 
-footer .redes-sociais .social_media a:hover {
-    color: #A98900;
+.embed-container iframe,
+.embed-container object,
+.embed-container embed { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-
+/* Media Querys */
+@media (max-width: 630px) {
+    .nav-item {
+        width: 100%;
+    }
+}
 
